tests/NormalTests/paczka1/fuzzy1/64768701.err
Error in line 8: FrUDe A629 96,7
Error in line 9: FrUDe S220 50,9
Error in line 18: iPXW0kL S194 30,9
Error in line 24: Ho4 A629 4,5
Error in line 29: A629 S194 2~,9
Error in line 31: Ho4 A59 48,6
Error in line 21: A629 A59 300,5
Error in line 36: Ho4 A629 8,2
